[package]
name = "ec2-vm"
version = "1.0.8"
edition = "2021"
authors = ["Rodolfo Villaruz <rodolfo@yes.ph>"]
description = "A small command-line tool for managing a single AWS EC2 instance you use as a development or work machine."
license = "MIT"
repository = "https://github.com/rodolfovillaruz/avm"
readme = "README.md"
keywords = ["cli", "tool"]
categories = ["command-line-utilities"]
exclude = [
    ".dump/*"
]

[[bin]]
name = "avm"
path = "src/main.rs"

[dependencies]
tokio       = { version = "1", features = ["full"] }
clap        = { version = "4", features = ["derive", "env"] }
anyhow      = "1"
thiserror   = "2"
reqwest     = { version = "0.13", features = ["json", "rustls"] }
serde       = { version = "1",    features = ["derive"] }
serde_json  = "1"
colored     = "3"
aws-config  = "1"
aws-sdk-ec2 = { version = "1", default-features = false, features = ["default-https-client", "rt-tokio"] }
